--- a/src/main/resources/dk/sdu/tek/presentation/adminmenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/adminmenu.fxml
@@ -2,19 +2,39 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.sdu.tek.presentation.SecondaryController">
    <children>
-      <Button layoutX="311.0" layoutY="70.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />
-      <Button layoutX="671.0" layoutY="584.0" mnemonicParsing="false" text="Rediger" />
-      <TextArea layoutX="477.0" layoutY="42.0" prefHeight="532.0" prefWidth="445.0" />
-      <TextField layoutX="88.0" layoutY="70.0" prefHeight="25.0" prefWidth="204.0" />
-      <Label layoutX="88.0" layoutY="42.0" text="Søg efter produktion" />
-      <Button layoutX="88.0" layoutY="549.0" mnemonicParsing="false" onAction="#switchToPrimary" text="Log ud" />
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="90.0" layoutY="143.0" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="322.0" layoutY="202.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />
+      <TextField layoutX="89.0" layoutY="202.0" prefHeight="25.0" prefWidth="219.0" />
+      <Label layoutX="89.0" layoutY="177.0" text="Søg efter indhold" />
+      <Button layoutX="864.0" layoutY="559.0" mnemonicParsing="false" onAction="#switchToPrimary" text="Log ud" />
+      <Button layoutX="572.0" layoutY="559.0" mnemonicParsing="false" text="Rediger" />
+      <Button layoutX="642.0" layoutY="559.0" mnemonicParsing="false" text="Slet" />
+      <MenuButton layoutX="470.0" layoutY="559.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Opret">
+         <items>
+            <MenuItem mnemonicParsing="false" text="Kreditering" />
+            <MenuItem mnemonicParsing="false" text="Produktion" />
+            <MenuItem mnemonicParsing="false" text="Bruger" />
+            <MenuItem mnemonicParsing="false" text="Medvirkende" />
+         </items>
+      </MenuButton>
+      <MenuButton layoutX="89.0" layoutY="242.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Se alle">
+         <items>
+            <MenuItem mnemonicParsing="false" text="Krediteringer" />
+            <MenuItem mnemonicParsing="false" text="Produktioner" />
+            <MenuItem mnemonicParsing="false" text="Brugere" />
+            <MenuItem mnemonicParsing="false" text="Medvirkende" />
+         </items>
+      </MenuButton>
+      <ListView layoutX="470.0" layoutY="56.0" prefHeight="476.0" prefWidth="444.0" />
+      <ImageView fitHeight="94.0" fitWidth="137.0" layoutX="89.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="25.0" fitWidth="24.0" layoutX="890.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
