--- a/src/main/resources/dk/sdu/tek/presentation/seermenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/seermenu.fxml
@@ -1,16 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="dk.sdu.tek.presentation.SecondaryController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.sdu.tek.presentation.SecondaryController">
     <children>
-        <Button layoutX="53.0" layoutY="336.0" mnemonicParsing="false" onAction="#switchToPrimary" text="Log ud" />
+        <Button layoutX="322.0" layoutY="202.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />
+        <TextField layoutX="89.0" layoutY="202.0" prefHeight="25.0" prefWidth="219.0" />
+        <Label layoutX="89.0" layoutY="177.0" text="Søg efter indhold" />
+        <MenuButton layoutX="89.0" layoutY="242.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Se alle">
+            <items>
+                <MenuItem mnemonicParsing="false" text="Produktioner" />
+                <MenuItem mnemonicParsing="false" text="Medvirkende" />
+            </items>
+        </MenuButton>
+        <ListView layoutX="470.0" layoutY="56.0" prefHeight="476.0" prefWidth="444.0" />
+        <ImageView fitHeight="94.0" fitWidth="137.0" layoutX="89.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" />
+        <ImageView fitHeight="25.0" fitWidth="24.0" layoutX="890.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
     </children>
 </AnchorPane>
