--- a/src/main/resources/dk/sdu/tek/presentation/producermenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/producermenu.fxml
@@ -5,34 +5,66 @@
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.sdu.tek.presentation.SecondaryController">
-   <children>
-      <Button layoutX="322.0" layoutY="202.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />
-      <TextField layoutX="89.0" layoutY="202.0" prefHeight="25.0" prefWidth="219.0" />
-      <Label layoutX="89.0" layoutY="177.0" text="Søg efter indhold" />
-      <Button layoutX="861.0" layoutY="559.0" mnemonicParsing="false" onAction="#switchToPrimary" text="Log ud" />
-      <Button layoutX="572.0" layoutY="559.0" mnemonicParsing="false" text="Rediger" />
-      <Button layoutX="642.0" layoutY="559.0" mnemonicParsing="false" text="Slet" />
-      <MenuButton layoutX="470.0" layoutY="559.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Opret">
-         <items>
-            <MenuItem mnemonicParsing="false" text="Kreditering" />
-            <MenuItem mnemonicParsing="false" text="Produktion" />
-            <MenuItem mnemonicParsing="false" text="Medvirkende" />
-         </items>
-      </MenuButton>
-      <MenuButton layoutX="89.0" layoutY="242.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Se alle">
-         <items>
-            <MenuItem mnemonicParsing="false" text="Krediteringer" />
-            <MenuItem mnemonicParsing="false" text="Produktioner" />
-            <MenuItem mnemonicParsing="false" text="Medvirkende" />
-         </items>
-      </MenuButton>
-      <ListView layoutX="470.0" layoutY="56.0" prefHeight="476.0" prefWidth="444.0" />
-      <ImageView fx:id="logo" fitHeight="94.0" fitWidth="137.0" layoutX="89.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="exit" fitHeight="20.0" fitWidth="20.0" layoutX="890.0" layoutY="14.0" onMouseClicked="#exit" pickOnBounds="true" preserveRatio="true" />
-   </children>
-</AnchorPane>
+<TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.sdu.tek.presentation.SecondaryController">
+   <tabs>
+      <Tab text="TV2">
+         <content>
+            <AnchorPane fx:id="anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+               <children>
+                  <Button layoutX="322.0" layoutY="202.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />
+                  <TextField layoutX="89.0" layoutY="202.0" prefHeight="25.0" prefWidth="219.0" />
+                  <Label layoutX="89.0" layoutY="177.0" text="Søg efter indhold" />
+                  <Button layoutX="861.0" layoutY="559.0" mnemonicParsing="false" onAction="#switchToPrimary" text="Log ud" />
+                  <Button layoutX="470.0" layoutY="559.0" mnemonicParsing="false" text="Rediger" />
+                  <Button layoutX="546.0" layoutY="559.0" mnemonicParsing="false" text="Slet" />
+                  <MenuButton layoutX="358.0" layoutY="559.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Opret" visible="false">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Kreditering" />
+                        <MenuItem mnemonicParsing="false" text="Produktion" />
+                        <MenuItem mnemonicParsing="false" text="Medvirkende" />
+                     </items>
+                  </MenuButton>
+                  <MenuButton layoutX="89.0" layoutY="242.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Se alle">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Krediteringer" />
+                        <MenuItem mnemonicParsing="false" text="Produktioner" />
+                        <MenuItem mnemonicParsing="false" text="Medvirkende" />
+                     </items>
+                  </MenuButton>
+                  <ListView layoutX="470.0" layoutY="56.0" prefHeight="476.0" prefWidth="444.0" />
+                  <ImageView fx:id="logo" fitHeight="94.0" fitWidth="137.0" layoutX="89.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="exit" fitHeight="20.0" fitWidth="20.0" layoutX="890.0" layoutY="14.0" onMouseClicked="#exit" pickOnBounds="true" preserveRatio="true" />
+               </children>
+            </AnchorPane>
+         </content>
+      </Tab>
+      <Tab text="Opret">
+         <content>
+            <AnchorPane fx:id="anchorpane2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+               <children>
+                  <Text layoutX="80.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret produktion" />
+                  <Text layoutX="288.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret person" />
+                  <Text layoutX="511.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret kreditering" />
+                  <TextField layoutX="80.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
+                  <TextField layoutX="288.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
+                  <TextField layoutX="511.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Person ID" />
+                  <TextField layoutX="80.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
+                  <TextField layoutX="288.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Kontakt info" />
+                  <TextField layoutX="288.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="ID" />
+                  <TextField layoutX="511.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Rolle" />
+                  <TextField layoutX="511.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
+                  <Button layoutX="509.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="Opret" />
+                  <Button layoutX="288.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="Opret" />
+                  <Button layoutX="79.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="Opret" />
+               </children></AnchorPane>
+         </content>
+      </Tab>
+   </tabs>
+</TabPane>
