--- a/src/main/resources/dk/sdu/tek/presentation/producermenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/producermenu.fxml
@@ -52,17 +52,17 @@
                   <Text layoutX="80.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret produktion" />
                   <Text layoutX="288.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret person" />
                   <Text layoutX="511.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret kreditering" />
-                  <TextField layoutX="80.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
-                  <TextField layoutX="288.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
-                  <TextField layoutX="511.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Person ID" />
-                  <TextField layoutX="80.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
-                  <TextField layoutX="288.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Kontakt info" />
-                  <TextField layoutX="288.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="ID" />
-                  <TextField layoutX="511.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Rolle" />
-                  <TextField layoutX="511.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
-                  <Button layoutX="509.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="Opret" />
-                  <Button layoutX="288.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="Opret" />
-                  <Button layoutX="79.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="Opret" />
+                  <TextField fx:id="producerCreateProductionName" layoutX="80.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
+                  <TextField fx:id="producerCreatePersonName" layoutX="288.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
+                  <TextField fx:id="producerCreateCreditID" layoutX="511.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Person ID" />
+                  <TextField fx:id="producerCreateProductionID" layoutX="80.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
+                  <TextField fx:id="producerCreatePersonInfo" layoutX="288.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Kontakt info" />
+                  <TextField fx:id="producerCreatePersonID" layoutX="288.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="ID" />
+                  <TextField fx:id="producerCreateCreditRole" layoutX="511.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Rolle" />
+                  <TextField fx:id="producerCreateCreditProductionID" layoutX="511.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
+                  <Button fx:id="producerCreateCreditButton" layoutX="509.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="Opret" />
+                  <Button fx:id="producercreatePersonButton" layoutX="288.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="Opret" />
+                  <Button fx:id="producerCreateProductionButton" layoutX="79.0" layoutY="237.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="Opret" />
                </children></AnchorPane>
          </content>
       </Tab>
