--- a/src/main/resources/dk/sdu/tek/presentation/adminmenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/adminmenu.fxml
@@ -20,6 +20,7 @@
                <content>
                   <AnchorPane fx:id="anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
                      <children>
+                        <ListView fx:id="resultList" layoutX="33.0" layoutY="112.0" prefHeight="474.0" prefWidth="346.0" />
                         <Button layoutX="33.0" layoutY="77.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />
                         <TextField layoutX="33.0" layoutY="43.0" prefHeight="25.0" prefWidth="219.0" />
                         <Label layoutX="33.0" layoutY="25.0" text="Søg efter indhold" />
@@ -36,12 +37,11 @@
                         <MenuButton fx:id="seeAll" layoutX="99.0" layoutY="77.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Se alle...">
                            <items>
                               <MenuItem fx:id="seeCredits" mnemonicParsing="false" text="Krediteringer" />
-                              <MenuItem fx:id="seeProductions" mnemonicParsing="false" text="Produktioner" />
+                              <MenuItem fx:id="seeProductions" mnemonicParsing="false" onAction="#setResultList" text="Produktioner" />
                               <MenuItem fx:id="seeUsers" mnemonicParsing="false" text="Brugere" />
                               <MenuItem fx:id="seePeople" mnemonicParsing="false" text="Medvirkende" />
                            </items>
                         </MenuButton>
-                        <ListView fx:id="resultList" layoutX="33.0" layoutY="116.0" prefHeight="470.0" prefWidth="345.0" />
                      </children>
                   </AnchorPane>
                </content>
