--- a/src/main/resources/dk/sdu/tek/presentation/adminmenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/adminmenu.fxml
@@ -3,8 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
@@ -16,32 +14,22 @@
    <children>
       <TabPane fx:id="mainTab" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="650.0" prefWidth="954.0" style="-fx-background-color: #fff;" tabClosingPolicy="UNAVAILABLE">
          <tabs>
-            <Tab text="TV2">
+            <Tab text="Produktioner">
                <content>
                   <AnchorPane fx:id="anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
                      <children>
-                        <ListView fx:id="resultList" layoutX="33.0" layoutY="112.0" prefHeight="474.0" prefWidth="346.0" />
-                        <Button layoutX="33.0" layoutY="77.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />
-                        <TextField layoutX="33.0" layoutY="43.0" prefHeight="25.0" prefWidth="219.0" />
                         <Label layoutX="33.0" layoutY="25.0" text="Søg efter indhold" />
-                        <Button layoutX="440.0" layoutY="559.0" mnemonicParsing="false" text="Rediger" />
-                        <Button layoutX="394.0" layoutY="559.0" mnemonicParsing="false" text="Slet" />
-                        <MenuButton layoutX="308.0" layoutY="559.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Opret" visible="false">
-                           <items>
-                              <MenuItem mnemonicParsing="false" text="Kreditering" />
-                              <MenuItem mnemonicParsing="false" text="Produktion" />
-                              <MenuItem mnemonicParsing="false" text="Bruger" />
-                              <MenuItem mnemonicParsing="false" text="Medvirkende" />
-                           </items>
-                        </MenuButton>
-                        <MenuButton fx:id="seeAll" layoutX="99.0" layoutY="77.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Se alle...">
-                           <items>
-                              <MenuItem fx:id="seeCredits" mnemonicParsing="false" text="Krediteringer" />
-                              <MenuItem fx:id="seeProductions" mnemonicParsing="false" onAction="#setResultList" text="Produktioner" />
-                              <MenuItem fx:id="seeUsers" mnemonicParsing="false" text="Brugere" />
-                              <MenuItem fx:id="seePeople" mnemonicParsing="false" text="Medvirkende" />
-                           </items>
-                        </MenuButton>
+                        <TextField layoutX="33.0" layoutY="43.0" prefHeight="25.0" prefWidth="219.0" />
+                        <Button disable="true" layoutX="260.0" layoutY="43.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />
+                        <ListView fx:id="resultList" layoutX="33.0" layoutY="79.0" prefHeight="507.0" prefWidth="346.0" />
+                        <TextField fx:id="productionNameTextField" layoutX="477.0" layoutY="123.0" prefHeight="26.0" prefWidth="155.0" />
+                        <TextField fx:id="productionIDTextField" layoutX="663.0" layoutY="123.0" prefHeight="26.0" prefWidth="90.0" />
+                        <TextField fx:id="thisProducerTextField" layoutX="477.0" layoutY="197.0" prefHeight="26.0" prefWidth="155.0" />
+                        <Label layoutX="477.0" layoutY="105.0" text="Navn" />
+                        <Label layoutX="663.0" layoutY="105.0" text="ID" />
+                        <Label layoutX="477.0" layoutY="179.0" text="Producer" />
+                        <Label layoutX="663.0" layoutY="179.0" text="Producer ID" />
+                        <TextField fx:id="thisProducerIDTextField" layoutX="663.0" layoutY="197.0" prefHeight="26.0" prefWidth="90.0" />
                      </children>
                   </AnchorPane>
                </content>
@@ -78,6 +66,6 @@
       </TabPane>
       <ImageView fx:id="logo" fitHeight="63.0" fitWidth="140.0" layoutX="790.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="exit" fitHeight="20.0" fitWidth="20.0" layoutX="928.0" layoutY="5.0" onMouseClicked="#exit" pickOnBounds="true" preserveRatio="true" />
-      <Button layoutX="860.0" layoutY="2.0" mnemonicParsing="false" onAction="#switchToPrimary" text="Log ud" />
+      <Button layoutX="870.0" layoutY="2.0" mnemonicParsing="false" onAction="#switchToPrimary" text="Log ud" />
    </children>
 </AnchorPane>
