--- a/src/main/resources/dk/sdu/tek/presentation/VisitorMenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/VisitorMenu.fxml
@@ -3,25 +3,55 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="wrapper" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.sdu.tek.presentation.SecondaryController">
-    <children>
-        <Button layoutX="322.0" layoutY="202.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />
-        <TextField layoutX="89.0" layoutY="202.0" prefHeight="25.0" prefWidth="219.0" />
-        <Label layoutX="89.0" layoutY="177.0" text="Søg efter indhold" />
-        <MenuButton layoutX="89.0" layoutY="242.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Se alle">
-            <items>
-                <MenuItem mnemonicParsing="false" text="Produktioner" />
-                <MenuItem mnemonicParsing="false" text="Medvirkende" />
-            </items>
-        </MenuButton>
-        <ListView layoutX="470.0" layoutY="56.0" prefHeight="476.0" prefWidth="444.0" />
-        <ImageView fx:id="logo" fitHeight="94.0" fitWidth="137.0" layoutX="89.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" />
-        <ImageView fx:id="exit" fitHeight="20.0" fitWidth="20.0" layoutX="890.0" layoutY="14.0" onMouseClicked="#exit" pickOnBounds="true" preserveRatio="true" />
-    </children>
+
+<?import javafx.scene.image.ImageView?>
+<AnchorPane fx:id="wrapper" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.sdu.tek.presentation.SecondaryController">
+   <children>
+      <TabPane fx:id="mainTab">
+         <tabs>
+            <Tab>
+               <content>
+                  <AnchorPane fx:id="wrapper" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0">
+                      <children>
+                          <Label layoutX="33.0" layoutY="25.0" text="Søg efter indhold" />
+                          <TextField layoutX="33.0" layoutY="43.0" prefHeight="25.0" prefWidth="219.0" />
+                          <Button disable="true" layoutX="260.0" layoutY="43.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />
+                          <ListView fx:id="resultList" layoutX="33.0" layoutY="79.0" onMouseClicked="#getSelectedItem" prefHeight="507.0" prefWidth="346.0" />
+                          <TextField fx:id="productionNameTextField" layoutX="477.0" layoutY="123.0" prefHeight="26.0" prefWidth="155.0" />
+                          <TextField fx:id="productionIDTextField" layoutX="663.0" layoutY="123.0" prefHeight="26.0" prefWidth="90.0" />
+                          <TextField fx:id="thisProducerTextField" layoutX="477.0" layoutY="197.0" prefHeight="26.0" prefWidth="155.0" />
+                          <Label layoutX="477.0" layoutY="105.0" text="Navn" />
+                          <Label layoutX="663.0" layoutY="105.0" text="ID" />
+                          <Label layoutX="477.0" layoutY="179.0" text="Producer" />
+                          <Label layoutX="663.0" layoutY="179.0" text="Producer ID" />
+                          <TextField fx:id="thisProducerIDTextField" layoutX="663.0" layoutY="197.0" prefHeight="26.0" prefWidth="90.0" />
+                      </children>
+                  <!--    <children>-->
+                  <!--        <Button layoutX="322.0" layoutY="202.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />-->
+                  <!--        <TextField layoutX="89.0" layoutY="202.0" prefHeight="25.0" prefWidth="219.0" />-->
+                  <!--        <Label layoutX="89.0" layoutY="177.0" text="Søg efter indhold" />-->
+                  <!--        <MenuButton layoutX="89.0" layoutY="242.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Se alle">-->
+                  <!--            <items>-->
+                  <!--                <MenuItem mnemonicParsing="false" text="Produktioner" />-->
+                  <!--                <MenuItem mnemonicParsing="false" text="Medvirkende" />-->
+                  <!--            </items>-->
+                  <!--        </MenuButton>-->
+                  <!--        <ListView layoutX="470.0" layoutY="56.0" prefHeight="476.0" prefWidth="444.0" />-->
+                  <!--        <ImageView fx:id="logo" fitHeight="94.0" fitWidth="137.0" layoutX="89.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" />-->
+                  <!--        <ImageView fx:id="exit" fitHeight="20.0" fitWidth="20.0" layoutX="890.0" layoutY="14.0" onMouseClicked="#exit" pickOnBounds="true" preserveRatio="true" />-->
+                  <!--    </children>-->
+                  </AnchorPane>
+               </content>
+            </Tab>
+         </tabs>
+      </TabPane>
+      <ImageView fx:id="logo" fitHeight="63.0" fitWidth="140.0" layoutX="790.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="exit" fitHeight="20.0" fitWidth="20.0" layoutX="928.0" layoutY="5.0" onMouseClicked="#exit" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="870.0" layoutY="2.0" mnemonicParsing="false" onAction="#switchToPrimary" text="Log ud" />
+   </children>
 </AnchorPane>
