--- a/src/main/resources/dk/sdu/tek/presentation/producermenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/producermenu.fxml
@@ -12,38 +12,26 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane fx:id="wrapper" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.sdu.tek.presentation.SecondaryController">
    <children>
       <TabPane fx:id="mainTab" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" tabClosingPolicy="UNAVAILABLE">
          <tabs>
-            <Tab text="TV2">
+            <Tab text="Produktioner">
                <content>
                   <AnchorPane fx:id="anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
                      <children>
-                        <Button layoutX="322.0" layoutY="202.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />
-                        <TextField layoutX="89.0" layoutY="202.0" prefHeight="25.0" prefWidth="219.0" />
-                        <Label layoutX="89.0" layoutY="177.0" text="Søg efter indhold" />
-                        <Button layoutX="861.0" layoutY="559.0" mnemonicParsing="false" onAction="#switchToPrimary" text="Log ud" />
-                        <Button layoutX="470.0" layoutY="559.0" mnemonicParsing="false" text="Rediger" />
-                        <Button layoutX="546.0" layoutY="559.0" mnemonicParsing="false" text="Slet" />
-                        <MenuButton layoutX="358.0" layoutY="559.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Opret" visible="false">
-                           <items>
-                              <MenuItem mnemonicParsing="false" text="Kreditering" />
-                              <MenuItem mnemonicParsing="false" text="Produktion" />
-                              <MenuItem mnemonicParsing="false" text="Medvirkende" />
-                           </items>
-                        </MenuButton>
-                        <MenuButton layoutX="89.0" layoutY="242.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Se alle">
-                           <items>
-                              <MenuItem mnemonicParsing="false" text="Krediteringer" />
-                              <MenuItem mnemonicParsing="false" text="Produktioner" />
-                              <MenuItem mnemonicParsing="false" text="Medvirkende" />
-                           </items>
-                        </MenuButton>
-                        <ListView layoutX="470.0" layoutY="56.0" prefHeight="476.0" prefWidth="444.0" />
-                        <ImageView fx:id="logo" fitHeight="94.0" fitWidth="137.0" layoutX="89.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" />
-                        <ImageView fx:id="exit" fitHeight="20.0" fitWidth="20.0" layoutX="890.0" layoutY="14.0" onMouseClicked="#exit" pickOnBounds="true" preserveRatio="true" />
+                        <Label layoutX="33.0" layoutY="25.0" text="Søg efter indhold" />
+                        <TextField layoutX="33.0" layoutY="43.0" prefHeight="25.0" prefWidth="219.0" />
+                        <Button disable="true" layoutX="260.0" layoutY="43.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />
+                        <ListView fx:id="resultList" layoutX="33.0" layoutY="79.0" onMouseClicked="#getSelectedItem" prefHeight="507.0" prefWidth="346.0" />
+                        <TextField fx:id="productionNameTextField" layoutX="477.0" layoutY="123.0" prefHeight="26.0" prefWidth="155.0" />
+                        <TextField fx:id="productionIDTextField" layoutX="663.0" layoutY="123.0" prefHeight="26.0" prefWidth="90.0" />
+                        <TextField fx:id="thisProducerTextField" layoutX="477.0" layoutY="197.0" prefHeight="26.0" prefWidth="155.0" />
+                        <Label layoutX="477.0" layoutY="105.0" text="Navn" />
+                        <Label layoutX="663.0" layoutY="105.0" text="ID" />
+                        <Label layoutX="477.0" layoutY="179.0" text="Producer" />
+                        <Label layoutX="663.0" layoutY="179.0" text="Producer ID" />
+                        <TextField fx:id="thisProducerIDTextField" layoutX="663.0" layoutY="197.0" prefHeight="26.0" prefWidth="90.0" />
                      </children>
                   </AnchorPane>
                </content>
@@ -52,25 +40,81 @@
                <content>
                   <AnchorPane fx:id="anchorpane2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
                      <children>
-                        <Text layoutX="80.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret produktion" />
-                        <Text layoutX="288.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret person" />
-                        <Text layoutX="511.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret kreditering" />
-                        <TextField fx:id="producerCreateProductionName" layoutX="80.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
-                        <TextField fx:id="producerCreatePersonName" layoutX="288.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
-                        <TextField fx:id="producerCreateCreditID" layoutX="511.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Person ID" />
-                        <TextField fx:id="producerCreateProductionID" layoutX="80.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
-                        <TextField fx:id="producerCreatePersonInfo" layoutX="288.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Kontakt info" />
-                        <TextField fx:id="producerCreatePersonID" layoutX="288.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="ID" />
-                        <TextField fx:id="producerCreateCreditRole" layoutX="511.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Rolle" />
-                        <TextField fx:id="producerCreateCreditProductionID" layoutX="511.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
-                        <Button fx:id="producerCreateCreditButton" layoutX="509.0" layoutY="237.0" mnemonicParsing="false" onAction="#producerCreateCredit" prefHeight="25.0" prefWidth="95.0" text="Opret" />
-                        <Button fx:id="producercreatePersonButton" layoutX="288.0" layoutY="237.0" mnemonicParsing="false" onAction="#producerCreatePerson" prefHeight="25.0" prefWidth="95.0" text="Opret" />
-                        <Button fx:id="producerCreateProductionButton" layoutX="79.0" layoutY="237.0" mnemonicParsing="false" onAction="#producerCreateProduction" prefHeight="25.0" prefWidth="95.0" text="Opret" />
+                        <Text layoutX="184.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret produktion" />
+                        <Text layoutX="404.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret person" />
+                        <Text layoutX="648.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret kreditering" />
+                        <TextField fx:id="createProductionName" layoutX="184.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
+                        <TextField fx:id="createPersonName" layoutX="404.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />
+                        <TextField fx:id="createCreditID" layoutX="648.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Person ID" />
+                        <TextField fx:id="createProductionID" layoutX="184.0" layoutY="137.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
+                        <TextField fx:id="createPersonInfo" layoutX="404.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Kontakt info" />
+                        <TextField fx:id="createPersonID" layoutX="404.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="ID" />
+                        <TextField fx:id="createCreditRole" layoutX="648.0" layoutY="137.0" prefHeight="25.0" prefWidth="145.0" promptText="Rolle" />
+                        <TextField fx:id="createCreditProductionID" layoutX="648.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />
+                        <Button fx:id="createCreditButton" layoutX="646.0" layoutY="237.0" mnemonicParsing="false" onAction="#producerCreateCredit" prefHeight="25.0" prefWidth="95.0" text="Opret" />
+                        <Button fx:id="createPersonButton" layoutX="404.0" layoutY="237.0" mnemonicParsing="false" onAction="#createPerson" prefHeight="25.0" prefWidth="95.0" text="Opret" />
+                        <Button fx:id="adminCreateProductionButton" layoutX="182.0" layoutY="237.0" mnemonicParsing="false" onAction="#producerCreateProduction" prefHeight="25.0" prefWidth="95.0" text="Opret" />
                      </children>
                   </AnchorPane>
                </content>
             </Tab>
+<!--            <Tab text="TV2">-->
+<!--               <content>-->
+<!--                  <AnchorPane fx:id="anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">-->
+<!--                     <children>-->
+<!--                        <Button layoutX="322.0" layoutY="202.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />-->
+<!--                        <TextField layoutX="89.0" layoutY="202.0" prefHeight="25.0" prefWidth="219.0" />-->
+<!--                        <Label layoutX="89.0" layoutY="177.0" text="Søg efter indhold" />-->
+<!--                        <Button layoutX="861.0" layoutY="559.0" mnemonicParsing="false" onAction="#switchToPrimary" text="Log ud" />-->
+<!--                        <Button layoutX="470.0" layoutY="559.0" mnemonicParsing="false" text="Rediger" />-->
+<!--                        <Button layoutX="546.0" layoutY="559.0" mnemonicParsing="false" text="Slet" />-->
+<!--                        <MenuButton layoutX="358.0" layoutY="559.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Opret" visible="false">-->
+<!--                           <items>-->
+<!--                              <MenuItem mnemonicParsing="false" text="Kreditering" />-->
+<!--                              <MenuItem mnemonicParsing="false" text="Produktion" />-->
+<!--                              <MenuItem mnemonicParsing="false" text="Medvirkende" />-->
+<!--                           </items>-->
+<!--                        </MenuButton>-->
+<!--                        <MenuButton layoutX="89.0" layoutY="242.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="86.0" text="Se alle">-->
+<!--                           <items>-->
+<!--                              <MenuItem mnemonicParsing="false" text="Krediteringer" />-->
+<!--                              <MenuItem mnemonicParsing="false" text="Produktioner" />-->
+<!--                              <MenuItem mnemonicParsing="false" text="Medvirkende" />-->
+<!--                           </items>-->
+<!--                        </MenuButton>-->
+<!--                        <ListView layoutX="470.0" layoutY="56.0" prefHeight="476.0" prefWidth="444.0" />-->
+<!--                        <ImageView fx:id="logo" fitHeight="94.0" fitWidth="137.0" layoutX="89.0" layoutY="56.0" pickOnBounds="true" preserveRatio="true" />-->
+<!--                        <ImageView fx:id="exit" fitHeight="20.0" fitWidth="20.0" layoutX="890.0" layoutY="14.0" onMouseClicked="#exit" pickOnBounds="true" preserveRatio="true" />-->
+<!--                     </children>-->
+<!--                  </AnchorPane>-->
+<!--               </content>-->
+<!--            </Tab>-->
+<!--            <Tab text="Opret">-->
+<!--               <content>-->
+<!--                  <AnchorPane fx:id="anchorpane2" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="619.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">-->
+<!--                     <children>-->
+<!--                        <Text layoutX="80.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret produktion" />-->
+<!--                        <Text layoutX="288.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret person" />-->
+<!--                        <Text layoutX="511.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Opret kreditering" />-->
+<!--                        <TextField fx:id="producerCreateProductionName" layoutX="80.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />-->
+<!--                        <TextField fx:id="producerCreatePersonName" layoutX="288.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Navn" />-->
+<!--                        <TextField fx:id="producerCreateCreditID" layoutX="511.0" layoutY="103.0" prefHeight="25.0" prefWidth="145.0" promptText="Person ID" />-->
+<!--                        <TextField fx:id="producerCreateProductionID" layoutX="80.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />-->
+<!--                        <TextField fx:id="producerCreatePersonInfo" layoutX="288.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Kontakt info" />-->
+<!--                        <TextField fx:id="producerCreatePersonID" layoutX="288.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="ID" />-->
+<!--                        <TextField fx:id="producerCreateCreditRole" layoutX="511.0" layoutY="138.0" prefHeight="25.0" prefWidth="145.0" promptText="Rolle" />-->
+<!--                        <TextField fx:id="producerCreateCreditProductionID" layoutX="511.0" layoutY="173.0" prefHeight="25.0" prefWidth="145.0" promptText="Produktions ID" />-->
+<!--                        <Button fx:id="producerCreateCreditButton" layoutX="509.0" layoutY="237.0" mnemonicParsing="false" onAction="#producerCreateCredit" prefHeight="25.0" prefWidth="95.0" text="Opret" />-->
+<!--                        <Button fx:id="producercreatePersonButton" layoutX="288.0" layoutY="237.0" mnemonicParsing="false" onAction="#producerCreatePerson" prefHeight="25.0" prefWidth="95.0" text="Opret" />-->
+<!--                        <Button fx:id="producerCreateProductionButton" layoutX="79.0" layoutY="237.0" mnemonicParsing="false" onAction="#producerCreateProduction" prefHeight="25.0" prefWidth="95.0" text="Opret" />-->
+<!--                     </children>-->
+<!--                  </AnchorPane>-->
+<!--               </content>-->
+<!--            </Tab>-->
          </tabs>
       </TabPane>
+      <ImageView fx:id="logo" fitHeight="63.0" fitWidth="140.0" layoutX="790.0" layoutY="560.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="exit" fitHeight="20.0" fitWidth="20.0" layoutX="928.0" layoutY="5.0" onMouseClicked="#exit" pickOnBounds="true" preserveRatio="true" />
+      <Button layoutX="870.0" layoutY="2.0" mnemonicParsing="false" onAction="#switchToPrimary" text="Log ud" />
    </children>
 </AnchorPane>
