--- a/src/main/resources/dk/sdu/tek/presentation/adminmenu.fxml
+++ b/src/main/resources/dk/sdu/tek/presentation/adminmenu.fxml
@@ -19,8 +19,8 @@
                   <AnchorPane fx:id="anchorpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="648.0" prefWidth="954.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
                      <children>
                         <Label layoutX="33.0" layoutY="25.0" text="Søg efter indhold" />
-                        <TextField layoutX="33.0" layoutY="43.0" prefHeight="25.0" prefWidth="219.0" />
-                        <Button disable="true" layoutX="260.0" layoutY="43.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="57.0" text="Søg" />
+                        <TextField fx:id="searchField" layoutX="33.0" layoutY="43.0" prefHeight="25.0" prefWidth="219.0" />
+                        <Button layoutX="260.0" layoutY="43.0" mnemonicParsing="false" onAction="#searchForProduction" prefHeight="25.0" prefWidth="57.0" text="Søg" />
                         <ListView fx:id="resultList" layoutX="33.0" layoutY="79.0" onMouseClicked="#getSelectedItem" prefHeight="507.0" prefWidth="346.0" />
                         <TextField fx:id="productionNameTextField" layoutX="477.0" layoutY="123.0" prefHeight="26.0" prefWidth="155.0" />
                         <TextField fx:id="productionIDTextField" layoutX="663.0" layoutY="123.0" prefHeight="26.0" prefWidth="90.0" />
